spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ nav.smaller ul li a {
     line-height: 150%;
     left: 10%;
     width: 80%;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
   }
 }
 
@@ -359,7 +359,7 @@ h1 {
     line-height: 150%;
     left: 10%;
     width: 80%;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
   }
 }
 
